--- a/circle.yml
+++ b/circle.yml
@@ -33,3 +33,7 @@ dependencies:
 database:
   override:
     - bundle exec rake db:migrate
+
+test:
+  override:
+    - bundle exec rspec ./spec/models/user_spec.rb
