--- a/config/hydra-ldap.yml
+++ b/config/hydra-ldap.yml
@@ -1,26 +1,9 @@
-defaults: &defaults
-  host: <%= ENV.fetch('APPS_HORTON_LDAP_HOST') %>
-  port: <%= ENV.fetch('APPS_HORTON_LDAP_PORT') %>
-  base: <%= ENV.fetch('APPS_HORTON_LDAP_BASE') %>
-  username: <%= ENV.fetch('APPS_HORTON_LDAP_USER') %>
-  password: <%= ENV.fetch('APPS_HORTON_LDAP_PASS') %>
-  admin_group: <%= ENV.fetch('APPS_HORTON_LDAP_ADMIN_GROUP') %>
-  curator_group: <%= ENV.fetch('APPS_HORTON_LDAP_CURATOR_GROUP') %>
-
-pontos:
-  <<: *defaults
-
-staging:
-  <<: *defaults
-
-production:
-  <<: *defaults
-
-development:
-  <<: *defaults
-
 test:
-  <<: *defaults
+  host: <%= ENV.fetch('APPS_HORTON_LDAP_HOST') {'localhost'}%>
+  port: <%= ENV.fetch('APPS_HORTON_LDAP_PORT') {'1389'}%>
+  base: <%= ENV.fetch('APPS_HORTON_LDAP_BASE') {'dc=example,dc=com'}%>
+  username: <%= ENV.fetch('APPS_HORTON_LDAP_USER') {'cn=toplevel_user,cn=TOPLEVEL,dc=example,dc=com'}%>
+  password: <%= ENV.fetch('APPS_HORTON_LDAP_PASS') {'toplevel_password'}%>
+  admin_group: <%= ENV.fetch('APPS_HORTON_LDAP_ADMIN_GROUP') {'CN=lib-dmr-ro,OU=lib-storage,OU=Linux Groups,OU=Groups,OU=University Library,DC=AD,DC=UCSD,DC=EDU'}%>
+  curator_group: <%= ENV.fetch('APPS_HORTON_LDAP_CURATOR_GROUP') {'CN=lib-dmr-ro,OU=lib-storage,OU=Linux Groups,OU=Groups,OU=University Library,DC=AD,DC=UCSD,DC=EDU'}%>
   
-  
-
